--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -43,13 +43,13 @@
       </div>
     </section>
 
-    <!-- 2. 列車毎の販売情報 -->
+    <!-- 2. 車両毎の販売情報 -->
     <section class="mb-5">
-      <h2 class="mb-3">列車毎の販売状況</h2>
+      <h2 class="mb-3">車両毎の販売状況</h2>
       <table class="table table-striped table-bordered">
         <thead class="table-light">
           <tr>
-            <th>列車名</th>
+            <th>車両名</th>
             <th>販売枚数</th>
             <th>未確定売上</th>
             <th>確定売上</th>
@@ -62,12 +62,12 @@
       </table>
     </section>
 
-    <!-- 3. 列車追加フォーム -->
+    <!-- 3. 車両追加フォーム -->
     <section>
-      <h2 class="mb-3">列車の追加</h2>
+      <h2 class="mb-3">車両の追加</h2>
       <form id="add-train-form" class="mb-3">
         <div class="mb-3">
-          <label for="train-name" class="form-label">列車名</label>
+          <label for="train-name" class="form-label">車両名</label>
           <input type="text" class="form-control" id="train-name" required>
         </div>
         <div class="mb-3">
@@ -82,7 +82,7 @@
             <i class="bi bi-plus-circle"></i> 追加
           </button>
         </div>
-        <button type="submit" class="btn btn-primary">列車追加</button>
+        <button type="submit" class="btn btn-primary">車両追加</button>
       </form>
       <div id="add-train-message" class="text-success"></div>
     </section>
@@ -203,7 +203,7 @@
         if (res.ok) {
           const data = await res.json();
           if (data.status === 'success') {
-            messageDiv.textContent = '列車が追加されました。';
+            messageDiv.textContent = '車両が追加されました。';
             form.reset();
             container.innerHTML = '';
             departureTimeCount = 0;
